fix the title overflow

--- a/css/monster.scss
+++ b/css/monster.scss
@@ -61,8 +61,6 @@ em {
         line-height: normal;
         vertical-align: middle;
         
-        h4 {height: 42px;}
-
         a {
             color: black;
             text-decoration: none;
